--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
             <button id="restart-btn">Tilbage</button>
         </div>
         <div id="start-screen">
-            <h2>Velkommen til <strong>Bælgbarometerens quiz</strong></h2>
-            <p>Vi har taget et barometer på danskernes bælgfrugtsvaner</p>
-            <p>Kan du gætte hvad de har valgt?</p>
+            <h2>Velkommen til <strong>bælgbarometerets quiz</strong></h2>
+            <p>Vi har taget et temperaturen på danskernes bælgfrugtsvaner</p>
+            <p>Kan du gætte, hvad de har valgt?</p>
             <button id="start-game-btn" type="button">Start quizzen!</button>
         </div>
     </div>
