--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <div id="end-screen" class="hidden">
             <p>Du fik <strong><span id="final-score"></span>/<span id="total-questions"></span></strong> rigtige</p>
             <p><span id="score-comment"></span></p>
+            <p>Dyk ned i <a href = "https://google.com">Bælgbarometeret her</a> og find alle tal om danskernes holdning og forbrug af bælgfrugter.</p>
             <button id="restart-btn">Tilbage</button>
         </div>
         <div id="start-screen">
