--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </div>
         <div id="start-screen">
             <h2>Velkommen til <strong>bælgbarometerets quiz</strong></h2>
-            <p>Vi har taget et temperaturen på danskernes bælgfrugtsvaner</p>
+            <p>Vi har taget temperaturen på danskernes bælgfrugtsvaner.</p>
             <p>Kan du gætte, hvad de har valgt?</p>
             <button id="start-game-btn" type="button">Start quizzen!</button>
         </div>
